e2e/admission-webhooks/validating/invalid-linodecluster.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeCluster
metadata:
  name: ($name)
spec:
  region: invalid
