e2e/admission-webhooks/validating/invalid-linodemachine.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeMachine
metadata:
  name: ($name)
spec:
  region: invalid
  type: invalid
