e2e/admission-webhooks/validating/invalid-linodeobjectstoragebucket.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha2
kind: LinodeObjectStorageBucket
metadata:
  name: ($name)
spec:
  region: invalid
