e2e/admission-webhooks/validating/invalid-linodeplacementgroup.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodePlacementGroup
metadata:
  name: ($name)
spec:
  region: invalid
