e2e/admission-webhooks/validating/invalid-linodevpc.yaml
---
apiVersion: infrastructure.cluster.x-k8s.io/v1alpha1
kind: LinodeVPC
metadata:
  name: ($name)
spec:
  region: invalid
  subnets:
    - ipv4: 9.9.9.9
