e2e/admission-webhooks/validating/assert-capl-resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capl-controller-manager
  namespace: capl-system
status:
  availableReplicas: 1
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: capl-validating-webhook-configuration
